@@ -13,6 +13,8 @@ Stable versions
 	- remove nonexistent Modplug Tracker IT quirk (reported by Johannes
 	  Schultz, voice samples shouldn't play in Deep in Her Eyes remake)
 	- fix Startrekker Packer loader
+	- fix IT215 compressed sample loader (reported by Ben "GreaseMonkey"
+	  Russell)
 
 3.3.0 (20101202):
 	- change MED BPM mode tempo setting (reported by Lorence Lombardo)
